# crowd_tracker_lidar3d

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
include/crowd_tracker_lidar3d/: README.md
jupyter_nbs/: PCL_analysis.ipynb  PointCloud_Segmentation.ipynb  VisualValidation.ipynb
jupyter_nbs/.ipynb_checkpoints/: PointCloud_Segmentation-checkpoint.ipynb
scripts/: LCAS_bbox_generator.py  LCAS_to_hdf.py  bounding_box_generator.py  bounding_box_generator_outlier.py  bounding_box_plotter.py  data_to_hdf5.py  external_data_to_hdf.py  file_annotator.py  hello_world.py  pcl_test.py  pointcloud_plotter.py  pointnet.py  rosbag_reader.py  topic_list.txt
src/: README.md  rosbag_reader.py
src/crowd_tracker_lidar3d/: annotation_utils.py  cluster_utils.py  hdf5_util.py  helpers.py  loader.py  optics.py  pcl_helper.py  plot_tools.py  preprocessing.py  rosbag_reader.py  segmentation.py
